--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -520,22 +520,22 @@ releases:
             # Check if secret resource exists, create if not
             if ! kubectl get secret -n {{ .Values.namespace }} dex-tls &> /dev/null; then
               echo "Creating Certificate resource for Dex TLS..."
-              cat << 'EOF' | kubectl apply -f -
-              apiVersion: cert-manager.io/v1
-              kind: Certificate
-              metadata:
-                name: dex-certificate
-                namespace: {{ .Values.namespace }}
-                annotations:
-                  acme.cert-manager.io/issue-temporary-certificate: "true"
-              spec:
-                secretName: dex-tls
-                issuerRef:
-                  name: {{ .Values | get "overrides.dex.ingress.certIssuer" "letsencrypt-prod" }}
-                  kind: ClusterIssuer
-                dnsNames:
-                  - {{ .Values | get "overrides.dex.host" (printf "dex.%s" .Values.baseDomain) }}
-              EOF
+              kubectl apply -f - <<EOF
+            apiVersion: cert-manager.io/v1
+            kind: Certificate
+            metadata:
+              name: dex-certificate
+              namespace: {{ .Values.namespace }}
+              annotations:
+                acme.cert-manager.io/issue-temporary-certificate: "true"
+            spec:
+              secretName: dex-tls
+              issuerRef:
+                name: {{ .Values | get "overrides.dex.ingress.certIssuer" "letsencrypt-prod" }}
+                kind: ClusterIssuer
+              dnsNames:
+                - {{ .Values | get "overrides.dex.host" (printf "dex.%s" .Values.baseDomain) }}
+            EOF
               echo "Certificate resource created for Dex"
             else
               echo "Certificate resource for Dex already exists"
