--- a/charts/unbind/templates/ingress.yaml
+++ b/charts/unbind/templates/ingress.yaml
@@ -9,6 +9,7 @@ metadata:
     {{- include "unbind.labels" . | nindent 4 }}
   annotations:
     kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/affinity: cookie
@@ -57,6 +58,7 @@ metadata:
     {{- include "unbind.labels" . | nindent 4 }}
   annotations:
     kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
@@ -93,6 +95,7 @@ metadata:
     {{- include "unbind.labels" . | nindent 4 }}
   annotations:
     kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     {{- with .Values.ui.ingress.annotations }}
     {{- toYaml . | nindent 4 }}
