Add registry ingress

--- a/charts/unbind/values.yaml
+++ b/charts/unbind/values.yaml
@@ -143,6 +143,8 @@ api:
       nginx.ingress.kubernetes.io/websocket-services: unbind-api
   command: ["/app/api"]
   env:
+    - name: SYSTEM_NAMESPACE
+      value: "unbind-system"
     - name: EXTERNAL_UI_URL
       value: "https://unbind.example.com"
     - name: EXTERNAL_API_URL
@@ -184,10 +186,18 @@ api:
       value: unbindapp/unbind-builder:latest
     - name: BUILDER_NAMESPACE
       value: unbind-system
-    - name: CONTAINER_REGISTRY_HOST
+    - name: BOOTSTRAP_CONTAINER_REGISTRY_HOST
       value: docker-registry.unbind-system:5000
-    - name: CONTAINER_REGISTRY_PASSWORD
-      value: TODO
+    - name: BOOTSTRAP_CONTAINER_REGISTRY_USER
+      valueFrom:
+        secretKeyRef:
+          name: registry-credentials
+          key: username
+    - name: BOOTSTRAP_CONTAINER_REGISTRY_PASSWORD
+      valueFrom:
+        secretKeyRef:
+          name: registry-credentials
+          key: password
     - name: BUILDKIT_HOST
       value: tcp://buildkitd.unbind-system:1234
     - name: LOKI_ENDPOINT
@@ -239,6 +249,8 @@ auth:
       nginx.ingress.kubernetes.io/ssl-redirect: "true"
   command: ["/app/oauth2server"]
   env:
+    - name: SYSTEM_NAMESPACE
+      value: "unbind-system"
     - name: EXTERNAL_OAUTH2_URL
       value: "https://unbind.example.com/api/oauth2"
     - name: POSTGRES_HOST
