Missing tls-acme annotation

--- a/charts/registry/templates/ingress.yaml
+++ b/charts/registry/templates/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: docker-registry-ingress
   namespace: {{ .Release.namespace }}
   annotations:
+    kubernetes.io/tls-acme: "true"
     # Enable basic auth (nginx ingress annotation example)
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
     nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
